--- a/module2-solution/css/module2.css
+++ b/module2-solution/css/module2.css
@@ -12,12 +12,14 @@ h1 {
 
 p {
     width: 90%;
+    margin-top: 5px;
+    margin-bottom: 5px;
     margin-left: auto;
-    margin-right: auto;   
+    margin-right: auto;
 }
 
 .content {
-    width: 90%;
+    width: auto;
     position: relative;
     border: 1px solid black;
     background-color: silver;
@@ -31,25 +33,27 @@ p {
     height: 10%;
     position: relative;
     left: 75%;
-    border: 1px solid brown;
+    top: -1px;
+    border: 1px solid black;
+    border-right: hidden;
     background-color: blueviolet;
     font-size: 1.25em;
     text-align: center;
     padding: .5%;
 }
 
-/* -- WIP, need to apply these to titles only
-#section1 {
+
+#title1 {
     background-color: rgb(201, 55, 55);
 }
 
-#section2 {
+#title2 {
     background-color: forestgreen;
 }
 
-#section3 {
+#stitle3{
     background-color: royalblue;
-}*/
+}
 
 /* Simple Responsive Layout */
 .row {
