--- a/module2-solution/css/module2.css
+++ b/module2-solution/css/module2.css
@@ -11,11 +11,11 @@ h1 {
 }
 
 p {
-    width: 90%;
+    width: auto;
     margin-top: 5px;
     margin-bottom: 5px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .content {
