Fixed breakpoints (again)

--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -16,15 +16,19 @@ span.menu-row {
     background-color: beige;
 }
 
-/*** Desktop & Tablet (sm in BS3, md in BS5 ***/
-@media (min-width: 768px) {
+/*** Note -- Breakpoints are set to correspond with Bootstrap 5
+Which may differ from Bootstrap 3, which was the version used in lecture.
+Using the latest stable release seemed the best course of action ***/
+
+/*** Small, Medium and larger Devices - Desktop & Tablet ***/
+@media (min-width: 576px) {
     #menu-grid {
         margin: auto;
     }
 }
 
-/*** Mobile (xs in BS3, sm in BS5) ***/
-@media (max-width: 767px) {
+/*** Extra-Small Devices - Mobile (xs) ***/
+@media (max-width: 575px) {
     #menu-grid {
         margin-left: 10%;
         margin-right: 10%;
